--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,10 @@
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
 #title {
   background-color: #ff4c68;
+  color: #fff;
 }
 
 h1 {
@@ -17,4 +22,10 @@ h1 {
   transform: rotate(25deg);
   width: 300px;
   margin: 40px auto 20px 20px;
+}
+
+/* Navigation Bar */
+
+.navbar-brand {
+  font-family: "Ubuntu";
 }
