--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body {
 h1 {
   font-family: "Montserrat", sans-serif;
   font-weight: 900;
-  font-size: 3rem;
+  font-size: 3.5rem;
   line-height: 1.5;
 }
 
@@ -18,14 +18,34 @@ h1 {
   padding: 3% 15%;
 }
 
-.iphone6 {
+.title-image {
   transform: rotate(25deg);
-  width: 300px;
+  width: 60%;
   margin: 40px auto 20px 20px;
 }
 
 /* Navigation Bar */
 
+.navbar {
+  padding-bottom: 4.5rem;
+}
+
 .navbar-brand {
   font-family: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.nav-item {
+  padding: 0 18px;
+}
+
+.nav-link {
+  font-size: 1.2rem;
+}
+
+/* Download Buttons */
+
+.download-button {
+  margin: 5% 3% 5% 0;
 }
