--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,15 @@ h1 {
   line-height: 1.5;
 }
 
+h3 {
+  font-family: Montserrat;
+  font-weight: bold;
+}
+
+p {
+  color: #8f8f8f;
+}
+
 .container-fluid {
   padding: 3% 15%;
 }
@@ -48,4 +57,52 @@ h1 {
 
 .download-button {
   margin: 5% 3% 5% 0;
+}
+
+/* Features */
+
+/* .col-lg-4 {
+  text-align: center;
+  margin: 10% 0;
+}
+
+.features-i {
+  color: #ff7777;
+  font-size: 200%;
+  padding-bottom: 10px;
+}
+
+:hover.features-i {
+  color: red;
+}
+
+h3 {
+  font-weight: bold;
+  font-size: large;
+}
+
+.features-p {
+  font-weight: lighter;
+  text-align: center;
+  font-size: small;
+} */
+
+/* Features Section */
+
+#features {
+  padding: 7% 15%;
+}
+
+.feature-box {
+  text-align: center;
+  padding: 5%;
+}
+
+.icon {
+  color: #ef8172;
+  margin-bottom: 1rem;
+}
+
+.icon:hover {
+  color: #ff4c68;
 }
