--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,13 @@ h1 {
   line-height: 1.5;
 }
 
+h2 {
+  font-family: "Montserrat";
+  font-weight: bold;
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
 h3 {
   font-family: Montserrat;
   font-weight: bold;
@@ -77,4 +84,13 @@ p {
 
 .icon:hover {
   color: #ff4c68;
+}
+
+/* Testimonial Section  */
+
+#testimonials {
+  padding: 7% 15%;
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
 }
