--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ h1 {
 
 h2 {
   font-family: "Montserrat";
-  font-weight: bold;
+  font-weight: 900;
   font-size: 3rem;
   line-height: 1.5;
 }
@@ -30,14 +30,9 @@ p {
   color: #8f8f8f;
 }
 
-.container-fluid {
-  padding: 3% 15%;
-}
-
-.title-image {
-  transform: rotate(25deg);
-  width: 60%;
-  margin: 40px auto 20px 20px;
+a {
+  color: #000;
+  margin: 10px;
 }
 
 /* Navigation Bar */
@@ -62,14 +57,28 @@ p {
 
 /* Download Buttons */
 
+.container-fluid {
+  padding: 3% 15% 7%;
+}
+
 .download-button {
   margin: 5% 3% 5% 0;
+}
+
+.title-image {
+  transform: rotate(25deg);
+  width: 276px;
+  margin: 40px auto 20px 20px;
+  position: absolute;
+  right: 23%;
 }
 
 /* Features Section */
 
 #features {
   padding: 7% 15%;
+  background-color: #fff;
+  position: relative;
 }
 
 .feature-box {
@@ -89,8 +98,71 @@ p {
 /* Testimonial Section  */
 
 #testimonials {
-  padding: 7% 15%;
   text-align: center;
   background-color: #ef8172;
   color: #fff;
+}
+
+.testimonial-image {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+.carousel-item {
+  padding: 7% 15%;
+}
+
+#press {
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
+}
+
+/* Pricing Section */
+
+#pricing {
+  padding: 100px;
+  text-align: center;
+}
+
+.pricing-column {
+  padding: 3% 2%;
+}
+
+@media (max-width: 1156px) {
+  #title {
+    text-align: center;
+  }
+
+  .title-image {
+    position: static;
+    transform: rotate(0);
+    margin-top: 0;
+  }
+}
+
+/* Footer Section */
+
+#cta {
+  background-color: #ff4c68;
+  text-align: center;
+  color: #fff;
+  font-family: "Montserrat";
+  font-weight: 900;
+  padding: 60px 40px;
+}
+
+#footer {
+  text-align: center;
+  margin-top: 60px;
+}
+
+.footer-p {
+  margin-top: 20px;
 }
