--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,6 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
-#title {
-  background-color: #ff4c68;
-  color: #fff;
-}
-
 h1 {
   font-family: "Montserrat", sans-serif;
   font-weight: 900;
@@ -32,7 +27,12 @@ p {
 
 a {
   color: #000;
-  margin: 10px;
+  margin: 20px 10px;
+}
+
+#title {
+  background-color: #ff4c68;
+  color: #fff;
 }
 
 /* Navigation Bar */
@@ -135,6 +135,33 @@ a {
   padding: 3% 2%;
 }
 
+/* CTA Section */
+
+#cta {
+  background-color: #ff4c68;
+  text-align: center;
+  color: #fff;
+  padding: 7% 15%;
+}
+
+.cta-heading {
+  font-family: "Montserrat";
+  font-weight: 900;
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+/* Footer Section  */
+
+#footer {
+  text-align: center;
+  padding: 7% 15%;
+}
+
+.footer-p {
+  margin-top: 20px;
+}
+
 @media (max-width: 1156px) {
   #title {
     text-align: center;
@@ -145,24 +172,4 @@ a {
     transform: rotate(0);
     margin-top: 0;
   }
-}
-
-/* Footer Section */
-
-#cta {
-  background-color: #ff4c68;
-  text-align: center;
-  color: #fff;
-  font-family: "Montserrat";
-  font-weight: 900;
-  padding: 60px 40px;
-}
-
-#footer {
-  text-align: center;
-  margin-top: 60px;
-}
-
-.footer-p {
-  margin-top: 20px;
 }
